--- a/quasar/package.json
+++ b/quasar/package.json
@@ -12,12 +12,14 @@
   },
   "dependencies": {
     "@quasar/extras": "1.9.10",
+    "@quasar/quasar-ui-qcalendar": "^3.3.5",
     "apollo-cache-inmemory": "1.6.6",
     "apollo-client": "2.6.10",
     "apollo-link": "1.2.14",
     "apollo-link-context": "1.0.20",
     "apollo-link-http": "1.5.17",
-    "axios": "0.21.0",
+    "axios": "^0.21.1",
+    "blitzar": "0.0.18",
     "emoji-mart-vue": "2.6.6",
     "graphql": "15.4.0",
     "graphql-tag": "2.11.0",
